--- a/index.html
+++ b/index.html
@@ -225,7 +225,14 @@
     <!-- 抽屉栏 -->
     <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
-            <center><h3>这是Fmkli的小网站</h3></center>
+	    <div class="mdui-grid-tile">
+	        <a href="//www.imfmkli.top;"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="" height=""/></a>
+          	<div class="mdui-grid-tile-actions">
+           	     <div class="mdui-grid-tile-text">
+              		<div class="mdui-grid-tile-title">Fmkli</div>
+            	     </div>
+          	</div>
+            </div>
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
             <li class="mdui-subheader">我的网站</li>
 
