--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="mdui-card-content mdui-typo">
                     <p>
                         <h1>我在2020年4月25日星期六成功建立B站号</h1><br>
-                        一只小鸽子，喜欢咕咕咕<br>
+                        一只小鸽子，喜欢咕咕咕，你不知道我会咕咕多久<br>
                         学生一个<br>
                         QQ：2058264685<br>
                         Email：fmkli2#qq.com / fmkli#mail.fmkli.ga (不常看)  (# => @)<br>
@@ -111,7 +111,7 @@
             
                         Github：Fmkli<br>
             
-                        （网站搭建的也有15个左右吧）<br>
+                        （网站搭建的也有19个左右吧）<br>
                     </p>
                 </div>
 
