--- a/index.html
+++ b/index.html
@@ -156,8 +156,21 @@
   		    发布评论时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>
    		    请友好评论，保持对他人的尊重；<br>
   		    严禁发布广告；<br>
+<script src="https://giscus.app/client.js"
+        data-repo="fmkli/fmkli"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkyOTA0NTkxNTQ="
+        data-category="随便说说"
+        data-category-id="DIC_kwDOEVAOEs4CAXnX"
+        data-mapping="title"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-theme="light"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
 			</center>
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickwww();" id="jiazai">加载留言系统（跳转去另一个页面）</button></center>			
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickwww();" id="jiazai">加载另一个留言系统（跳转去另一个页面）</button></center>			
 		    <script>
 		        function buttonClickwww(){
 				window.location.href='https://www.imfmkli.top/talk2.html'
