--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 		    <center>
                     <h3>若是捐赠将万分感谢，捐赠名单也会给出
                     </3><br>
-		    <h4><a href="https://afdian.net/@imfmkli">爱发电捐赠</a></h4><br>
-		    <img src="https://q3.a1pic.cn/2022/01/19/yvoZ.png"><br><h3>捐赠名单（按捐赠顺序）</h3><br>
+		    <h4><a href="https://afdian.net/@imfmkli">爱发电捐赠</a></h4>
+                    <br><h3>捐赠名单（按捐赠顺序）</h3><br>
 		    <ol>
         		<li>无</li>
     		    </ol>
