--- a/index.html
+++ b/index.html
@@ -276,6 +276,11 @@
                     class="mdui-list-item-icon mdui-icon material-icons">keyboard_return</i>
                 <div class="mdui-list-item-content">网址导航</div>
             </li>
+
+            <li class="mdui-list-item mdui-ripple" onclick="window.open('https://blog.imfmkli.top/48');"> <i
+                    class="mdui-list-item-icon mdui-icon material-icons"></i>
+                <div class="mdui-list-item-content">网站事迹</div>
+            </li>
             
             <li class="mdui-subheader">好玩的</li>
 		
