--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <body>
 <center>
 <h1>404 Not Found</h1>
-奶奶滴，怎么跑这来了？奶奶滴，回去！奶奶滴，这里没文件！<br><h4><a href="/">屑主页</a></h4>
+奶奶滴，怎么跑这来了？奶奶滴，回去！奶奶滴，这里没东西！<br><h4><a href="/">屑主页</a></h4>
 </center>
 </body>
 
