--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
+            <a href="/" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
