--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -55,8 +55,8 @@
 							<div class="nav">
 							<h3>更多<i></i></h3>
 							<a href="https://www.imfmkli.top">Fmkli的主页</a>
-							<a href="https://fmkli.rthe.net/dogedogedoge.html">彩蛋</a>
-							<a href="https://fmkli.js.org/website%20navigation/new/">添加收录</a>
+							<a href="https://fmkli.rth1.me/dogedogedoge.html">彩蛋</a>
+							<a href="https://www.imfmkli.top/website%20navigation/new/">添加收录</a>
 							<div class="clear"></div>
 							<div>
                         
