--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
-<body onload="test();countTime()" class="">
+<body onload="test();countTime()" class="mdui-appbar-with-toolbar">
     <marquee behavior="alternate" scrollamount="10" direction="left" style="background:rgb(0, 255, 234)" onmouseout="this.start();" onmouseover="this.stop();">本站网址已经换成www.imfmkli.top</marquee>
     <div style="position: fixed; background:url('https://api.dujin.org/bing/1920.php'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(2px)"></div>
     <!-- 工具栏 -->
