--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div style="position: fixed; background:url('https://api.dujin.org/bing/1920.php'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(2px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
-        <div class="mdui-toolbar mdui-color-red">
+        <div class="mdui-toolbar mdui-color-red mdui-shadow-0">
             <a class="mdui-btn" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i></a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
             <div class="mdui-toolbar-spacer"></div>
