--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="Fmkli,个人网站"/>
+    <meta name="description" content="Fmkli的小网站，欢迎访问！"/>
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
