--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="mdui-toolbar mdui-color-red mdui-shadow-0">
             <a class="mdui-btn" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i></a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
-	    <a class="mdui-btn"><img src="./hj.bmp"></a>
+	    <a class="mdui-btn mdui-btn-icon"><img src="./hj.bmp"></a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
