--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
         <div class="mdui-toolbar mdui-color-red mdui-shadow-0">
-            <a class="mdui-btn" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i></a>
+            <a class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i></a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
 	    <a class="mdui-btn" href="https://www.imfmkli.top/hj.bmp"><img src="./hj.bmp"></a>
             <div class="mdui-toolbar-spacer"></div>
