--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    
 	    
             <!-- 公告 -->
-            <div class="mdui-card card">
+            <div class="mdui-card card mdui-col-md-4">
 
                 <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title">公告</div>
