--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
-    <link rel="stylesheet" href=".home.css"/>
+    <link rel="stylesheet" href="./home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
 <body onload="test();countTime()" class="mdui-appbar-with-toolbar">
@@ -56,7 +56,7 @@
 	    
 	    
             <!-- 公告 -->
-            <div class="mdui-card card mdui-col-md-4">
+            <div class="mdui-card card">
 
                 <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title">公告</div>
