--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
         <div class="mdui-toolbar mdui-color-red mdui-shadow-0">
-            <a class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i></a>
+            <a class="mdui-btn mdui-ripple" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i> 菜单</a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
-	    <a class="mdui-btn" href="https://www.imfmkli.top/hj.bmp"><img src="./hj.bmp"></a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
