--- a/index.html
+++ b/index.html
@@ -117,26 +117,26 @@
             </div>
 	
 	
-            <!-- 捐赠卡片 -->
-            <div class="mdui-card card">
+	
+	    <div class="mdui-container card">
+                <div class="mdui-panel mdui-panel-popout" mdui-panel>
+                    <div class="mdui-panel-item">
+                        <div class="mdui-panel-item-header">捐赠我</div>
+        		<div class="mdui-panel-item-body">
+		    	    <center>
+                    	    	<h3>若是捐赠将万分感谢，捐赠名单也会给出
+                    	    	</3><br>
+		    	    	<h4><a href="https://afdian.net/@imfmkli">爱发电捐赠</a></h4>
+                    	    	<br><h3>捐赠名单（按捐赠顺序）</h3><br>
+		    	    	<ol>
+        		            <li>无</li>
+    		    	    	</ol>
+		            </center>
+        		</div>
+      		    </div>
+    		</div>
+  	    </div>
 
-                <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title">捐赠我</div>
-                </div>
-
-                <!-- 卡片的内容 -->
-                <div class="mdui-card-content mdui-typo">
-		    <center>
-                    <h3>若是捐赠将万分感谢，捐赠名单也会给出
-                    </3><br>
-		    <h4><a href="https://afdian.net/@imfmkli">爱发电捐赠</a></h4>
-                    <br><h3>捐赠名单（按捐赠顺序）</h3><br>
-		    <ol>
-        		<li>无</li>
-    		    </ol>
-		    </center>
-                </div>
-	    </div>
 
             
         </div>
