--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
             </div>
 	
 	
-	
+	    <!--捐赠卡片-->
 	    <div class="mdui-container card">
-                <div class="mdui-panel mdui-panel-popout" mdui-panel>
+                <div class="mdui-panel" mdui-panel>
                     <div class="mdui-panel-item">
-                        <div class="mdui-panel-item-header">捐赠我</div>
+                        <div class="mdui-panel-item-header">捐赠我<div class="mdui-toolbar-spacer"></div><i class="mdui-icon material-icons">keyboard_arrow_down</i></div>
         		<div class="mdui-panel-item-body">
 		    	    <center>
                     	    	<h3>若是捐赠将万分感谢，捐赠名单也会给出
