--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             
             <li class="mdui-subheader">后台</li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.imfmkli.top/wp-admin'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://admin.imfmkli.top/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">add_to_queue</i>
                 <div class="mdui-list-item-content">Blogの后台</div>
             </li>
