--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
 
         <div id="tab6">
-	    <!--博客卡片-->
+	    <!--博客卡片
 	    <div class="mdui-card card">
 	        <div class="mdui-card-primary">
 	        <div class="mdui-card-primary-title">近期文章</div>
@@ -194,7 +194,7 @@
   	            <div id="posts-label" class="mdui-list"></div>
    	            <div id="post-spinner" class="mdui-spinner mdui-spinner-colorful mdui-center"></div>
   	        </div>
-	    </div>
+	    </div>-->
 	
             <!-- RRS -->
             <div class="mdui-card card">
