--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            Happy New Year!
+            咕咕咕咕咕
+            <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
         </h2>
     </nav>
     <div class="mdui-container-fluid">
