--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="mdui-card-content mdui-typo mdui-center">
                 <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span>
-		 <br>致谢：Yfun -- 本站使用了他写的一些JS和CSS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="http://dzx.gitlab.io/index/">DzxiumWebPages</a>--<a href="https://www.feige123.top/">飞哥的博客</a><br>
+		 <br>致谢：Yfun -- 本站使用了他写的一些CSS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="http://dzx.gitlab.io/index/">DzxiumWebPages</a>--<a href="https://www.feige123.top/">飞哥的博客</a><br>
 		<!--《添加网站运行时间 -->
 		<!--<br/>-->
 		<span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
@@ -403,7 +403,6 @@
 
 
     <script src="./mdui/js/mdui.min.js"></script>
-    <script src="./home.js"></script>
     <script>
 	function buttonClickww(){
 	    window.location.href='https://www.imfmkli.top/talk.html'
