--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="mdui-list-item-content">网址导航</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.open('https://blog.imfmkli.top/48');"> <i
+            <li class="mdui-list-item mdui-ripple" onclick="window.open('https://blog.imfmkli.top/2022/网站事迹/');"> <i
                     class="mdui-list-item-icon mdui-icon material-icons"></i>
                 <div class="mdui-list-item-content">网站事迹</div>
             </li>
