--- a/index.html
+++ b/index.html
@@ -408,6 +408,6 @@
 	    window.location.href='https://www.imfmkli.top/talk.html'
   	}
     </script>
-    <script src="./home.js"></script>
+    <!--<script src="./home.js"></script>-->
 </body>
 </html>
