--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
 
         <div id="tab6">
-	    <!--博客卡片
+	    <!--博客卡片-->
 	    <div class="mdui-card card">
 	        <div class="mdui-card-primary">
 	        <div class="mdui-card-primary-title">近期文章</div>
@@ -195,7 +195,7 @@
   	            <div id="posts-label" class="mdui-list"></div>
    	            <div id="post-spinner" class="mdui-spinner mdui-spinner-colorful mdui-center"></div>
   	        </div>
-	    </div>-->
+	    </div>
 	
             <!-- RRS -->
             <div class="mdui-card card">
@@ -206,7 +206,7 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-                Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/feed">https://blog.imfmkli.top/feed</a><br>欢迎订阅
+                Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/feed">https://blog.imfmkli.top/atom.xml</a><br>欢迎订阅
                 </div>
 
             </div>
