--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-                Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/feed">https://blog.imfmkli.top/atom.xml</a><br>欢迎订阅
+                Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/atom.xml">https://blog.imfmkli.top/atom.xml</a><br>欢迎订阅
                 </div>
 
             </div>
