--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <div class="mdui-list-item-content">Fmkliの网盘</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://stats.uptimerobot.com/4wP0ZtzRjZ'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://status.imfmkli.top/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
                 <div class="mdui-list-item-content">Fmkliの探针</div>
             </li>
