--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             <!-- 留言卡片 -->
             <div class="mdui-card card">
                 <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title">留言</div>
+                    <div class="mdui-card-primary-title">留言 / 说说</div>
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-			<center><h3>留言准则</h3>
+			<center><h3>留言板留言准则</h3>
   		    发布评论时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>
    		    请友好评论，保持对他人的尊重；<br>
   		    严禁发布广告；<br>
@@ -110,28 +110,18 @@
 		        function buttonClickwww(){
 				window.location.href='https://www.imfmkli.top/talk2.html'
   		        }
+	    	    </script><br>
+		    <script>
+		        function buttonClickss(){
+				window.location.href='https://www.imfmkli.top/say.html'
+  		        }
 	    	    </script>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://www.imfmkli.top/say.html" onclick="buttonClickss();" id="jiazaiss">加载说说（前往另一个页面）</button><br>jsd拖慢网站速度，说说跳转去另一个页面</center>
 		    <!--留言-->
                 </div>
             </div>
 	</div>
 
-        <div id="tab5">
-            <!-- 说说卡片 -->
-            <div class="mdui-card card">
-
-                <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title">说说</div>
-                </div>
-
-                <!-- 卡片的内容 -->
-                <div class="mdui-card-content mdui-typo">
-	    		<center><a href="https://www.imfmkli.top/say.html"><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://www.imfmkli.top/say.html" id="jiazaiss">加载说说（前往另一个页面）</button></a><br>jsd拖慢网站速度，跳转去另一个页面</center>
-
-                </div>
-
-            </div>
-        </div>
 
         <div id="tab6">
 	    <!--博客卡片-->
