--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                 <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span>
 		 <br>致谢：Yfun -- 本站使用了他写的一些CSS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a><br>
+			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280932956'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280932956%26online%3D2' type='text/javascript'%3E%3C/script%3E"));</script>
 		<!--《添加网站运行时间 -->
 		<!--<br/>-->
 		<span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
