--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <!-- 卡片的内容 -->
             <div class="mdui-card-content mdui-typo mdui-center">
                 <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
-		    <span class="footer-icp"><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span>
+		    <span class="footer-icp"><a class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a></span>
 		 <br>致谢：Yfun -- 本站使用了他写的一些CSS和JS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a><br>
 			<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280932956'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280932956%26online%3D2' type='text/javascript'%3E%3C/script%3E"));</script>
 		<!--《添加网站运行时间 -->
