--- a/index.html
+++ b/index.html
@@ -197,7 +197,12 @@
                     class="mdui-list-item-icon mdui-icon material-icons"></i>
                 <div class="mdui-list-item-content">网站事迹</div>
             </li>
-            
+
+            <li class="mdui-list-item mdui-ripple" onclick="window.open('https://chat.getloli.com/room/@fmkli');"> <i
+                    class="mdui-list-item-icon mdui-icon material-icons"></i>
+                <div class="mdui-list-item-content">网页聊天室</div>
+            </li>
+
             <li class="mdui-subheader">好玩的</li>
 		
 	    <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://dino.imfmkli.top'">
