--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.open('https://blog.imfmkli.top/2022/网站事迹/');"> <i
-                    class="mdui-list-item-icon mdui-icon material-icons"></i>
+                    class="mdui-list-item-icon mdui-icon material-icons">assignment</i>
                 <div class="mdui-list-item-content">网站事迹</div>
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.open('https://chat.getloli.com/room/@fmkli');"> <i
-                    class="mdui-list-item-icon mdui-icon material-icons"></i>
+                    class="mdui-list-item-icon mdui-icon material-icons">chat_bubble</i>
                 <div class="mdui-list-item-content">网页聊天室</div>
             </li>
 
