--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
            	     <div class="mdui-grid-tile-text">
               		<div class="mdui-grid-tile-title">Fmkli</div>
             	     </div>
+                     <div class="mdui-card-actions">
+                         <button class="mdui-btn mdui-ripple mdui-ripple-white">奇怪的按钮</button>
+                     </div>
           	</div>
             </div>
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
