--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             可怜的1IP站(欲哭无泪)
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
         </h2>
+	    <a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="700px"></a>
     </nav>
     <div class="mdui-container-fluid">
         <div id="tab1">
