--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
             可怜的1IP站(欲哭无泪)
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
-        </h2><br>
-	    <a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="700px"></a>
-    </nav>
+        </h2>
+	    
+    </nav><br>
+	<a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="700px"></a>
     <div class="mdui-container-fluid">
         <div id="tab1">
 	    <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
