--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </h2>
 	    
     </nav><br>
-	<center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="700px"></a></center>
+	<center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
     <div class="mdui-container-fluid">
         <div id="tab1">
 	    <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
