--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
         </h2>
 	    
-    </nav><br>
-	<center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
+    </nav>
     <div class="mdui-container-fluid">
         <div id="tab1">
 	    <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
@@ -317,6 +316,8 @@
             </div>
         </div>
     </center>
+    <br>
+    <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
 
 
     <script src="./mdui/js/mdui.min.js"></script>
