--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     </center>
     <br>
     <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
-
+    <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
 
     <script src="./mdui/js/mdui.min.js"></script>
     <script>
