--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Fmkli,个人网站"/>
     <meta name="description" content="Fmkli的小网站，欢迎访问！"/>
     <meta name="viewport" content="width=device-width">
-    <title>I'm Fmkli</title>
+    <title>鸽子主页~</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <link rel="stylesheet" href="./home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
@@ -17,7 +17,7 @@
     <div class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
         <div class="mdui-toolbar mdui-color-red mdui-shadow-0">
             <a class="mdui-btn mdui-ripple" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i> 菜单</a>
-            <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
+            <a href="https://www.imfmkli.top" class="mdui-typo-title">鸽子主页</a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
