--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="/" class="mdui-btn mdui-btn-icon"><img src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="50" height="50"></a>
+            <a href="/" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="50" height="50"></a>
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
@@ -43,7 +43,7 @@
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 		    <center>
-		    <img src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="100" height="100">
+		    <img alt="Fmkli的靓照" src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="100" height="100">
                     <p>本主页由Fmkli使用mdui框架制作。<br>
                     蛤，欢迎小可爱，我是Fmkli，一位学生，一只鸽子。<br />详细可看关于页面。</br>还请多多指教！
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过 BiliBili<a
@@ -148,7 +148,7 @@
     <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
 	    <div class="mdui-grid-tile">
-	        <a href="//www.imfmkli.top"><img src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="" height=""/></a>
+	        <a href="//www.imfmkli.top"><img alt="Fmkli的靓照" src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="" height=""/></a>
           	<div class="mdui-grid-tile-actions">
            	     <div class="mdui-grid-tile-text">
               		<div class="mdui-grid-tile-title">Fmkli</div>
@@ -317,8 +317,7 @@
         </div>
     </center>
     <br>
-    <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
-    <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
+    <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img alt="错过了这个村可就没这个店了啊~" src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
 
     <script src="./mdui/js/mdui.min.js"></script>
     <script>
