--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div style="position: fixed; background:url('https://api.dujin.org/bing/1920.php'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(2px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
-        <div class="mdui-toolbar mdui-color-red mdui-shadow-0">
+        <div class="mdui-toolbar mdui-color-white mdui-shadow-0">
             <a class="mdui-btn mdui-ripple" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i> 菜单</a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">鸽子主页</a>
             <div class="mdui-toolbar-spacer"></div>
