--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <ul class="mdui-list">
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.imfmkli.top'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.open('https://blog.imfmkli.top')">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">FmkliのBlog</div>
             </li>
