--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-			<center><h3>留言板留言准则</h3>
+			<center>
   		    发布评论时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>
    		    请友好评论，保持对他人的尊重；<br>
   		    严禁发布广告；<br>
