--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="/" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="50" height="50"></a>
+            <a href="/" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="./fmkli.png" width="50" height="50"></a>
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
@@ -43,7 +43,7 @@
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 		    <center>
-		    <img alt="Fmkli的靓照" src="https://bu.dusays.com/2021/02/05/860b003254b5c.png" width="100" height="100">
+		    <img alt="Fmkli的靓照" src="./fmkli.png" width="100" height="100">
                     <p>本主页由Fmkli使用mdui框架制作。<br>
                     蛤，欢迎小可爱，我是Fmkli，一位学生，一只鸽子。<br />详细可看关于页面。</br>还请多多指教！
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过 BiliBili<a
