--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </div>
     </center>
     <br>
-    <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><img alt="错过了这个村可就没这个店了啊~" src="https://cdn.imfmkli.top/ads.png" width="100%"></a></center>
+    <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><h2>广告：柠檬云站长扶植计划</h2></a></center>
 
     <script src="./mdui/js/mdui.min.js"></script>
     <script>
