--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Fmkli,个人网站"/>
     <meta name="description" content="Fmkli的小网站，欢迎访问！"/>
+    <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width">
     <title>鸽子主页~</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
