--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
             mdui.snackbar({
                 message: '欢迎光临！'
             });
+	    if ('serviceWorker' in navigator) {
+                // register service worker
+                navigator.serviceWorker.register('/service-worker.js');
+            };
         }
     </script>
 
