--- a/index.html
+++ b/index.html
@@ -254,9 +254,20 @@
                 message: '欢迎光临！'
             });
 	    if ('serviceWorker' in navigator) {
-                // register service worker
-                navigator.serviceWorker.register('/service-worker.js');
-            };
+		window.addEventListener('load', function() {
+		    navigator.serviceWorker.register('/sw.js', {
+			scope: '/'
+		    })
+                   .then(function(registration) {
+                        // 注册成功
+			console.log('ServiceWorker registration successful with scope: ', registration.scope)
+		    })
+		    .catch(function(err) {
+		    	// 注册失败:(
+		    	console.log('ServiceWorker registration failed: ', err)
+		    })
+		})
+	    }
         }
     </script>
 
