--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             });
 	    if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
-		    navigator.serviceWorker.register('/sw.js', {
+		    navigator.serviceWorker.register('/service-worker.js ', {
 			scope: '/'
 		    })
                    .then(function(registration) {
