--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="/" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="./fmkli.png" width="50" height="50"></a>
+            <a href="/" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="https://files.cfstar.cn/cdn/fmkli/favicon.png" width="50" height="50"></a>
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
