--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         .fanz {
             transform: rotateY(180deg);   /* 水平镜像翻转 */
         }
-
     </style>
 </head>
-<body onload="test()" class="mdui-appbar-with-toolbar"><div class="fanz">
+<div class="fanz"><body onload="test()" class="mdui-appbar-with-toolbar"><div class="fanz">
     <marquee scrollamount="5" direction="left" style="background:white; color:black" onmouseout="this.start();" onmouseover="this.stop();">本站网址已经换成www.imfmkli.top</marquee>
     <div style="position: fixed; background:url('./1920.jpg'); width: 100% ; height: 100% ; left: 0px; top: 0px; z-index: -100; filter: blur(1px)"></div>
     <!-- 工具栏 -->
@@ -325,5 +324,5 @@
 	    window.location.href='https://www.imfmkli.top/talk.html'
   	}
     </script>
-</div></body>
+</body></div>
 </html>
