--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="keywords" content="Fmkli,个人网站"/>
     <meta name="description" content="Fmkli的小网站，欢迎访问！"/>
     <meta name="viewport" content="width=device-width">
-    #<title>鸽子主页~</title>
-    <title>~页主子鸽</title>
+    <title>鸽子主页~</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <link rel="stylesheet" href="./home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
