--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
     <style>
-	/* 方法一 */
+	/* 方法一
         .fanz {
-            transform: rotateY(180deg);   /* 水平镜像翻转 */
+            transform: rotateY(180deg);  
         }
+	    */
     </style>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar fanz">
