--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
 		</script>
 		<!-- 添加网站运行时间》 -->
                 <br><br><br>
-                本站较丑，但<br><h2>又不是不能用</h2><h4><br>张贺凯每日名言<br></h4>	
-		<iframe src="https://zhk.nmsl.sb/api/v1/" width="250" height="60"></iframe>
+                本站较丑，但<br><h2>又不是不能用</h2><br>张贺凯每日名言<br>
+		<iframe title="张贺凯名言" src="https://zhk.nmsl.sb/api/v1/" width="250" height="60"></iframe><br>
 		</p>
             </div>
         </div>
