--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         一只小鸽子，喜欢咕咕咕，你不知道我会咕咕多久<br>
                         学生一个<br>
                         QQ：2058264685<br>
-                        Email：fmkli2#qq.com / fmkli#mail.fmkli.ga (不常看)  (# => @)<br>
+                        Email：fmkli2#qq.com (# => @)<br>
             
                         bilibili：烤全鸽Fmkli（https://space.bilibili.com/543825809）<br>
             
