--- a/index.html
+++ b/index.html
@@ -326,6 +326,6 @@
 	    window.location.href='https://www.imfmkli.top/talk.html'
   	}
     </script>
-    <embed src="https://pro-video.xiaoheiban.cn/xls/67a483e3-0998-4ff0-b98a-d17159552604.mp4" width="30">
+    <embed src="https://pro-video.xiaoheiban.cn/xls/67a483e3-0998-4ff0-b98a-d17159552604.mp4" width="50" height="50">
 </body>
 </html>
