--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="https://blog.imfmkli.top/" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="https://files.cfstar.cn/cdn/fmkli/favicon.png" width="50" height="50"></a>
+            <a href="https://pro-video.xiaoheiban.cn/xls/67a483e3-0998-4ff0-b98a-d17159552604.mp4" class="mdui-btn mdui-btn-icon"><img alt="Fmkli的靓照" src="https://files.cfstar.cn/cdn/fmkli/favicon.png" width="50" height="50"></a>
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
@@ -326,6 +326,5 @@
 	    window.location.href='https://www.imfmkli.top/talk.html'
   	}
     </script>
-    <embed src="https://pro-video.xiaoheiban.cn/xls/67a483e3-0998-4ff0-b98a-d17159552604.mp4" width="50" height="50">
 </body>
 </html>
