--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
         <div class="mdui-toolbar mdui-color-white mdui-shadow-0">
-            <a class="mdui-btn mdui-ripple" onclick="yrj();" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i> 菜单</a>
+            <a harf="" class="mdui-btn mdui-ripple" onclick="yrj();" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i> 菜单</a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">鸽子主页</a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
