--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
 		</script>
 		<!-- 添加网站运行时间》 -->
                 <br><br><br>
-                本站较丑，但<br><h2>又不是不能用</h2><br>张贺凯每日名言<br>
-		<iframe title="张贺凯名言" src="https://zhk.nmsl.sb/api/v1/" width="250" height="60"></iframe><br>
+                本站较丑，但<br><h2>又不是不能用</h2>
 		</p>
             </div>
         </div>
