--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            可怜的1IP站(欲哭无泪)
+            咕咕！咕咕咕咕！
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
         </h2>
 	    
