--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
             <a href="https://www.imfmkli.top" class="mdui-typo-title">鸽子主页</a>
             <div class="mdui-toolbar-spacer"></div>
         </div>
+	<!-- Tab -->
+	<div class="mdui-tab mdui-color-indigo mdui-tab-full-width" mdui-tab>
+      	    <a href="#tab1" class="mdui-ripple mdui-ripple-white">Home page</a>
+      	    <a href="#tab2" class="mdui-ripple mdui-ripple-white">Message And Say</a>
+    	</div>
     </div>
+    <!-- 大标题 -->
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
             咕咕！咕咕咕咕！
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
-        </h2>
-	    
+        </h2>    
     </nav>
+    <!-- 站の内容-->
     <div class="mdui-container-fluid">
         <div id="tab1">
 	    <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
@@ -57,7 +63,7 @@
         </div>
 
 
-	<div id="tab4">
+	<div id="tab2">
             <!-- 留言卡片 -->
             <div class="mdui-card card">
                 <div class="mdui-card-primary">
@@ -86,23 +92,6 @@
                 </div>
             </div>
 	</div>
-
-
-        <div id="tab6">
-	    <!--博客卡片
-	    <div class="mdui-card card">
-	        <div class="mdui-card-primary">
-	        <div class="mdui-card-primary-title">近期文章</div>
-	        <div class="mdui-card-primary-subtitle">最近在 Fmkli's Blog 上发布的 5 篇文章和状态</div>
-	        </div>
-
-	        <div class="mdui-card-content" id="posts">
-  	            <div id="posts-label" class="mdui-list"></div>
-   	            <div id="post-spinner" class="mdui-spinner mdui-spinner-colorful mdui-center"></div>
-  	        </div>
-	    </div>-->
-	
-        </div>
 
     </div>
 
@@ -205,9 +194,9 @@
             </div>
             <!-- 卡片的内容 -->
             <div class="mdui-card-content mdui-typo mdui-center">
-                <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
+                <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><a class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a></span>
-		 <br>致谢：Yfun -- 本站使用了他写的一些CSS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a><br>
+		 <br>致谢：Yfun -- 本站使用了他写的一些CSS<br>友链： <a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a><br>
 		<!--《添加网站运行时间 -->
 		<br/>
 		<span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
