--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    */
     </style>
 </head>
-<body onload="test()" class="mdui-appbar-with-toolbar fanz">
+<body onload="test()" class="mdui-appbar-with-toolbar fanz mdui-appbar-with-tab">
     <marquee scrollamount="5" direction="left" style="background:white; color:black" onmouseout="this.start();" onmouseover="this.stop();">本站网址已经换成www.imfmkli.top</marquee>
     <div style="position: fixed; background:url('./1920.jpg'); width: 100% ; height: 100% ; left: 0px; top: 0px; z-index: -100; filter: blur(1px)"></div>
     <!-- 工具栏 -->
