--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body onload="test()" class="mdui-appbar-with-toolbar fanz mdui-appbar-with-tab">
-    <marquee scrollamount="5" direction="left" style="background:white; color:black" onmouseout="this.start();" onmouseover="this.stop();">本站网址已经换成www.imfmkli.top</marquee>
+    <!-- <marquee scrollamount="5" direction="left" style="background:white; color:black" onmouseout="this.start();" onmouseover="this.stop();">本站网址已经换成www.imfmkli.top</marquee> -->
     <div style="position: fixed; background:url('./1920.jpg'); width: 100% ; height: 100% ; left: 0px; top: 0px; z-index: -100; filter: blur(1px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed mdui-shadow-0">
@@ -28,7 +28,7 @@
             <div class="mdui-toolbar-spacer"></div>
         </div>
 	<!-- Tab -->
-	<div class="mdui-tab mdui-color-indigo mdui-tab-full-width" mdui-tab>
+	<div class="mdui-tab mdui-color-white mdui-tab-full-width" mdui-tab>
       	    <a href="#tab1" class="mdui-ripple mdui-ripple-white">Home page</a>
       	    <a href="#tab2" class="mdui-ripple mdui-ripple-white">Message And Say</a>
     	</div>
