--- a/talk2.html
+++ b/talk2.html
@@ -20,7 +20,7 @@
   <script>
     Waline({
       el: '#waline',
-      serverURL: 'https://your-domain.vercel.app',
+      serverURL: 'https://waline.imfmkli.top/',
     });
   </script>
 
