--- a/talk2.html
+++ b/talk2.html
@@ -11,7 +11,7 @@
                 <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title">留言板</div>
                 </div>
-
+		访问量: <span id="<Your/Path/Name>" class="waline-visitor-count" />
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 
@@ -21,6 +21,7 @@
     Waline({
       el: '#waline',
       serverURL: 'https://waline.imfmkli.top/',
+      visitor: true, // 阅读量统计
     });
   </script>
 
