--- a/talk2.html
+++ b/talk2.html
@@ -11,7 +11,7 @@
                 <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title">留言板</div>
                 </div>
-		访问量: <span id="<Your/Path/Name>" class="waline-visitor-count" />
+		访问量: <span id="talk2.html" class="waline-visitor-count" />
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 
