--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <!-- 留言卡片 -->
             <div class="mdui-card card">
                 <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title">留言 / 说说</div>
+                    <div class="mdui-card-primary-title">留言</div>
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 			<center>
-  		    发布评论时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>
+  		    发布留言时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>
    		    请友好评论，保持对他人的尊重；<br>
   		    严禁发布广告；<br>
 			</center>
@@ -76,7 +76,8 @@
 		        function buttonClickwww(){
 				window.location.href='https://www.imfmkli.top/talk2.html'
   		        }
-	    	    </script><br>
+	    	    </script><hr>
+		    <h2>说说</h2>
 		    <script>
 		        function buttonClickss(){
 				window.location.href='https://www.imfmkli.top/say.html'
