--- a/say.html
+++ b/say.html
@@ -14,20 +14,15 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-<!-- 引用 HexoPlusPlus_Talk组件 -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/HexoPlusPlus/HexoPlusPlus@1.2.0/talk.css" /> 
-<script src="https://cdn.jsdelivr.net/gh/HexoPlusPlus/HexoPlusPlus@1.2.0/talk_user.js"></script>
-<!-- 创建HexoPlusPlus_Talk容器 -->
-<div id="hpp_talk"></div>
-<!-- 激活HexoPlusPlus_Talk -->
-<script>
-new hpp_talk({
-id:"hpp_talk",//容器id
-domain: "say.fmkli.workers.dev",//您的HexoPlusPlus域名，如admin.cyfan.top
-limit: 10,//单次获取的最多条数
-start: 0,//从第几条开始
-//themecss: "" //自定义说说主题，可选【仅1.1.0版本及以上使用】
-});
-</script>
+		    <!-- 引用 artitalk -->
+		    <script type="text/javascript" src="https://unpkg.com/artitalk"></script>
+		    <!-- 存放说说的容器 -->
+		    <div id="artitalk_main"></div>
+		    <script>
+			new Artitalk({
+    			    appId: 'tcAamuaemtpiPweN3TJVFsGY-MdYXbMMI', // Your LeanCloud appId
+    			    appKey: 'ylUKdWRkCrRiGxO4uQf6D1Ft' // Your LeanCloud appKey
+			})
+		    </script>
                 </div>
 	    </div>
