--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
             </div>
             <!-- 卡片的内容 -->
             <div class="mdui-card-content mdui-typo mdui-center">
-                <p><a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
-		    <span class="footer-icp"><a class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a></span>
+                <p><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
+		    <span class="footer-icp"><a rel="noopener" class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a></span>
 		 <br>致谢：Yfun -- 本站使用了他写的一些CSS<br>友链： <a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a><br>
 		<!--《添加网站运行时间 -->
 		<br/>
@@ -232,7 +232,7 @@
         </div>
     </center>
     <br>
-    <center><a href="https://blog.wz-software.top/archives/742" target="_blank"><h2>广告：柠檬云站长扶植计划</h2></a></center>
+    <center><a href="https://blog.wz-software.top/archives/742" rel="noopener" target="_blank"><h2>广告：柠檬云站长扶植计划</h2></a></center>
 
     <script src="./mdui/js/mdui.min.js"></script>
     <script>
