--- a/index.html
+++ b/index.html
@@ -240,5 +240,6 @@
 	    window.location.href='https://www.imfmkli.top/talk.html'
   	}
     </script>
+    <script src="https://myhkw.cn/api/player/1650622827168" id="myhk" key="1650622827168" m="1"></script>
 </body>
 </html>
