--- a/index.html
+++ b/index.html
@@ -241,5 +241,6 @@
   	}
     </script>
     <script src="https://myhkw.cn/api/player/1650622827168" id="myhk" key="1650622827168" m="1"></script>
+    <script src="https://myhkw.cn/player/js/jquery.min.js" type="text/javascript"></script>
 </body>
 </html>
