--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button class="mdui-btn mdui-ripple" onclick="yrj();" mdui-drawer="{target: '#left-drawer',overlay: true }"><i class="mdui-icon material-icons">menu</i> 菜单</button>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">鸽子主页</a>
             <div class="mdui-toolbar-spacer"></div>
+	    <button class="mdui-btn mdui-ripple" mdui-tooltip="{content: '米津玄师 -- Loser'}"><video width='50' height='50' controls="controls"><source src="https://m10.music.126.net/20220422191210/d15447b3e5496227dacad39f56228cb4/ymusic/obj/w5zDlMODwrDDiGjCn8Ky/13928137335/085c/0d45/16bc/8d4386eeb1790f423aee008ecb1cdedb.mp3" type="video/mp4"/></video></button>
         </div>
     </div>
     <!-- 大标题 -->
