--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- 大标题 -->
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            咕咕！咕咕咕咕！<br>
+            <center>咕咕！咕咕咕咕！<center><br>
 	    <audio src="https://www.imfmkli.top/music.mp3" controls="controls">提示：你的浏览器不支持Audio标签</audio>
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
         </h2>    
