--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <!-- 大标题 -->
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            <center>咕咕！咕咕咕咕！<center><br>
-	    <audio src="https://www.imfmkli.top/music.mp3" controls="controls">提示：你的浏览器不支持Audio标签</audio>
+            <center>咕咕！咕咕咕咕！<center>
             <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
         </h2>    
     </nav>
@@ -52,6 +51,7 @@
 		    <img alt="Fmkli的靓照" src="./fmkli.png" width="100" height="100">
                     <p>欢迎小可爱！关于Fmkli的信息可以看看<a href="https://blog.imfmkli.top/about.html">https://blog.imfmkli.top/about.html</a>
                     <br>这个主页我自个用mdui写的，嘿嘿嘿
+		    <br><audio src="https://www.imfmkli.top/music.mp3" controls="controls">提示：你的浏览器不支持Audio标签</audio>
                     </p>
 		    </center>
                 </div>
