--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		    <img alt="Fmkli的靓照" src="./fmkli.png" width="100" height="100">
                     <p>欢迎小可爱！关于Fmkli的信息可以看看<a href="https://blog.imfmkli.top/about.html">https://blog.imfmkli.top/about.html</a>
                     <br>这个主页我自个用mdui写的，嘿嘿嘿
-		    <br><h4>音乐-米津玄师-Loser</h4>
+		    <br><h4>音乐：米津玄师-Loser</h4>
 		    <div mdui-tooltip="{content: '米津玄师 -- Loser'}"><audio src="https://www.imfmkli.top/music.mp3" controls="controls">提示：你的浏览器不支持Audio标签</audio></div>
                     </p>
 		    </center>
