--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		    <img alt="Fmkli的靓照" src="./fmkli.png" width="100" height="100">
                     <p>欢迎小可爱！关于Fmkli的信息可以看看<a href="https://blog.imfmkli.top/about.html">https://blog.imfmkli.top/about.html</a>
                     <br>这个主页我自个用mdui写的，嘿嘿嘿<br>
-		    <br><p>音乐：米津玄师-Loser</p>
-		    <br><div mdui-tooltip="{content: '米津玄师 -- Loser'}"><audio src="https://www.imfmkli.top/music.mp3" controls="controls">提示：你的浏览器不支持Audio标签</audio></div>
+		    <br><p>音乐：米津玄师-Loser
+		    <br><div mdui-tooltip="{content: '米津玄师 -- Loser'}"><audio src="https://www.imfmkli.top/music.mp3" controls="controls">提示：你的浏览器不支持Audio标签</audio></div></p>
                     </p>
 		    </center>
                 </div>
