--- a/index.html
+++ b/index.html
@@ -176,10 +176,12 @@
     	        mdui.snackbar({
         	    message: '欢迎小可爱光临本站！'
     	        });
+		console.log("欢迎小可爱光临本站！");
 	    } else {
     	        mdui.snackbar({
         	    message: '欢迎来自'+reful+'的小可爱光临本站！'
     	        });
+		console.log("欢迎来自"+reful+"的小可爱光临本站！");
 	    }
         }
     </script>
