--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
         	    message: '欢迎来自'+reful+'的小可爱光临本站！'
     	        });
 		console.log("欢迎来自"+reful+"的小可爱光临本站！");
-	    }
+	    };
+	    var azzz= [ 
+         	{ 这是踩蛋！: "你知道吧"}
+    	    ];
+	    console.table(azzz);
         }
     </script>
 
